--- a/jing_working_file.ipynb
+++ b/jing_working_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "222ea1af",
    "metadata": {},
    "outputs": [],
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "id": "223e3095",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw = pd.read_excel(\"./data/Muesli Project raw data.xlsx\", header=1)\n"
+    "df_orders = pd.read_excel(\"./data/Muesli Project raw data.xlsx\",sheet_name=\"Orders\", header=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "b78eb41a",
    "metadata": {},
    "outputs": [
@@ -374,13 +374,512 @@
        "[9994 rows x 19 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_raw"
+    "df_orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "976d3d2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5009"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_orders['Order ID'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "8619beab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_campaign= pd.read_excel(\"./data/Muesli Project raw data.xlsx\", sheet_name=\"Campaign Data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "81de5dae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Arrival Scan Date</th>\n",
+       "      <th>Customer Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CA-2019-109666</td>\n",
+       "      <td>2019-05-03</td>\n",
+       "      <td>Kunst Miller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CA-2019-138933</td>\n",
+       "      <td>2019-05-03</td>\n",
+       "      <td>Jack Lebron</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CA-2019-130001</td>\n",
+       "      <td>2019-05-03</td>\n",
+       "      <td>Heather Kirkland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CA-2019-113061</td>\n",
+       "      <td>2019-05-06</td>\n",
+       "      <td>Ed Ludwig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CA-2019-162138</td>\n",
+       "      <td>2019-05-06</td>\n",
+       "      <td>Grace Kelly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>CA-2020-129707</td>\n",
+       "      <td>2020-05-08</td>\n",
+       "      <td>Larry Hughes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>CA-2020-125381</td>\n",
+       "      <td>2020-05-08</td>\n",
+       "      <td>Speros Goranitis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>CA-2020-141733</td>\n",
+       "      <td>2020-05-15</td>\n",
+       "      <td>Rick Wilson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>US-2020-104451</td>\n",
+       "      <td>2020-05-15</td>\n",
+       "      <td>Michelle Moray</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>US-2020-139647</td>\n",
+       "      <td>2020-05-15</td>\n",
+       "      <td>Todd Sumrall</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>333 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Order ID Arrival Scan Date     Customer Name\n",
+       "0    CA-2019-109666        2019-05-03      Kunst Miller\n",
+       "1    CA-2019-138933        2019-05-03       Jack Lebron\n",
+       "2    CA-2019-130001        2019-05-03  Heather Kirkland\n",
+       "3    CA-2019-113061        2019-05-06         Ed Ludwig\n",
+       "4    CA-2019-162138        2019-05-06       Grace Kelly\n",
+       "..              ...               ...               ...\n",
+       "328  CA-2020-129707        2020-05-08      Larry Hughes\n",
+       "329  CA-2020-125381        2020-05-08  Speros Goranitis\n",
+       "330  CA-2020-141733        2020-05-15       Rick Wilson\n",
+       "331  US-2020-104451        2020-05-15    Michelle Moray\n",
+       "332  US-2020-139647        2020-05-15      Todd Sumrall\n",
+       "\n",
+       "[333 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_campaign"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "b74c853a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_order_process=pd.read_excel(\"./data/Muesli Project raw data.xlsx\", sheet_name=\"Order Process Data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "98468ff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Row ID</th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>On Truck Scan Date</th>\n",
+       "      <th>Ship Mode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3074</td>\n",
+       "      <td>CA-2019-125206</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>2019-01-07</td>\n",
+       "      <td>Express</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4919</td>\n",
+       "      <td>CA-2019-160304</td>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>2019-01-09</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4920</td>\n",
+       "      <td>CA-2019-160304</td>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>2019-01-09</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8604</td>\n",
+       "      <td>US-2019-116365</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>2019-01-09</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8605</td>\n",
+       "      <td>US-2019-116365</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>2019-01-09</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5894</th>\n",
+       "      <td>908</td>\n",
+       "      <td>CA-2020-143259</td>\n",
+       "      <td>2020-12-30</td>\n",
+       "      <td>2021-01-06</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5895</th>\n",
+       "      <td>909</td>\n",
+       "      <td>CA-2020-143259</td>\n",
+       "      <td>2020-12-30</td>\n",
+       "      <td>2021-01-06</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5896</th>\n",
+       "      <td>1297</td>\n",
+       "      <td>CA-2020-115427</td>\n",
+       "      <td>2020-12-30</td>\n",
+       "      <td>2021-01-06</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5897</th>\n",
+       "      <td>1298</td>\n",
+       "      <td>CA-2020-115427</td>\n",
+       "      <td>2020-12-30</td>\n",
+       "      <td>2021-01-06</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5898</th>\n",
+       "      <td>5092</td>\n",
+       "      <td>CA-2020-156720</td>\n",
+       "      <td>2020-12-30</td>\n",
+       "      <td>2021-01-06</td>\n",
+       "      <td>Standard Processing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5899 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Row ID        Order ID Order Date On Truck Scan Date  \\\n",
+       "0       3074  CA-2019-125206 2019-01-03         2019-01-07   \n",
+       "1       4919  CA-2019-160304 2019-01-02         2019-01-09   \n",
+       "2       4920  CA-2019-160304 2019-01-02         2019-01-09   \n",
+       "3       8604  US-2019-116365 2019-01-03         2019-01-09   \n",
+       "4       8605  US-2019-116365 2019-01-03         2019-01-09   \n",
+       "...      ...             ...        ...                ...   \n",
+       "5894     908  CA-2020-143259 2020-12-30         2021-01-06   \n",
+       "5895     909  CA-2020-143259 2020-12-30         2021-01-06   \n",
+       "5896    1297  CA-2020-115427 2020-12-30         2021-01-06   \n",
+       "5897    1298  CA-2020-115427 2020-12-30         2021-01-06   \n",
+       "5898    5092  CA-2020-156720 2020-12-30         2021-01-06   \n",
+       "\n",
+       "                Ship Mode  \n",
+       "0                 Express  \n",
+       "1     Standard Processing  \n",
+       "2     Standard Processing  \n",
+       "3     Standard Processing  \n",
+       "4     Standard Processing  \n",
+       "...                   ...  \n",
+       "5894  Standard Processing  \n",
+       "5895  Standard Processing  \n",
+       "5896  Standard Processing  \n",
+       "5897  Standard Processing  \n",
+       "5898  Standard Processing  \n",
+       "\n",
+       "[5899 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_order_process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "97fdef4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3002"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_order_process['Order ID'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "540d2137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_InternData=pd.read_excel(\"./data/Muesli Project raw data.xlsx\", sheet_name=\"InternData Study\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "464aaa31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Ready to Ship Date</th>\n",
+       "      <th>Pickup Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CA-2019-116540</td>\n",
+       "      <td>2019-09-02</td>\n",
+       "      <td>2019-09-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CA-2019-116540</td>\n",
+       "      <td>2019-09-02</td>\n",
+       "      <td>2019-09-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CA-2019-129847</td>\n",
+       "      <td>2019-09-04</td>\n",
+       "      <td>2019-09-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CA-2019-129630</td>\n",
+       "      <td>2019-09-04</td>\n",
+       "      <td>2019-09-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CA-2019-106278</td>\n",
+       "      <td>2019-09-05</td>\n",
+       "      <td>2019-09-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>CA-2020-105333</td>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>2020-12-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>CA-2020-105333</td>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>2020-12-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>US-2020-110576</td>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>2020-12-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>CA-2020-119305</td>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>2020-12-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>CA-2020-142090</td>\n",
+       "      <td>2020-12-07</td>\n",
+       "      <td>2020-12-09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>290 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Order ID Ready to Ship Date Pickup Date\n",
+       "0    CA-2019-116540         2019-09-02  2019-09-03\n",
+       "1    CA-2019-116540         2019-09-02  2019-09-03\n",
+       "2    CA-2019-129847         2019-09-04  2019-09-04\n",
+       "3    CA-2019-129630         2019-09-04  2019-09-04\n",
+       "4    CA-2019-106278         2019-09-05  2019-09-06\n",
+       "..              ...                ...         ...\n",
+       "285  CA-2020-105333         2020-12-04  2020-12-07\n",
+       "286  CA-2020-105333         2020-12-04  2020-12-07\n",
+       "287  US-2020-110576         2020-12-04  2020-12-07\n",
+       "288  CA-2020-119305         2020-12-04  2020-12-07\n",
+       "289  CA-2020-142090         2020-12-07  2020-12-09\n",
+       "\n",
+       "[290 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_InternData"
    ]
   },
   {
