muesli_project_update

--- a/jing_working_file.ipynb
+++ b/jing_working_file.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 196,
    "id": "5f542575",
    "metadata": {},
    "outputs": [
@@ -282,11 +282,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Row ID</th>\n",
-       "      <th>Order ID</th>\n",
-       "      <th>Order Date</th>\n",
-       "      <th>On Truck Scan Date</th>\n",
-       "      <th>Ship Mode</th>\n",
+       "      <th>row id</th>\n",
+       "      <th>order id</th>\n",
+       "      <th>order date</th>\n",
+       "      <th>on truck scan date</th>\n",
+       "      <th>ship mode</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -311,12 +311,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Row ID        Order ID Order Date On Truck Scan Date            Ship Mode\n",
+       "   row id        order id order date on truck scan date            ship mode\n",
        "0    3074  CA-2019-125206 2019-01-03         2019-01-07              Express\n",
        "1    4919  CA-2019-160304 2019-01-02         2019-01-09  Standard Processing"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2980,7 +2980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "id": "093f64b4",
    "metadata": {},
    "outputs": [],
@@ -3347,6 +3347,120 @@
    ],
    "source": [
     "merged_o_truck_2_delivered['on truck day'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "95a96b99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "on truck day\n",
+       "friday        50\n",
+       "monday        30\n",
+       "tuesday        7\n",
+       "wednesday    171\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_o_truck_2_delivered[merged_o_truck_2_delivered[\"ship mode\"] == \"Standard\"] \\\n",
+    "    .groupby(\"on truck day\") \\\n",
+    "    .size()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "75f1c298",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "on truck day\n",
+       "friday       28\n",
+       "monday       16\n",
+       "tuesday       3\n",
+       "wednesday    28\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_o_truck_2_delivered[merged_o_truck_2_delivered[\"ship mode\"] == \"Express\"] \\\n",
+    "    .groupby(\"on truck day\") \\\n",
+    "    .size()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "372154c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "arrival day\n",
+       "friday        29\n",
+       "monday       173\n",
+       "thursday      14\n",
+       "tuesday       29\n",
+       "wednesday     13\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_o_truck_2_delivered[merged_o_truck_2_delivered[\"ship mode\"] == \"Standard\"] \\\n",
+    "    .groupby(\"arrival day\") \\\n",
+    "    .size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "a628ab1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "arrival day\n",
+       "friday       10\n",
+       "monday       42\n",
+       "thursday      5\n",
+       "tuesday      11\n",
+       "wednesday     7\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_o_truck_2_delivered[merged_o_truck_2_delivered[\"ship mode\"] == \"Express\"] \\\n",
+    "    .groupby(\"arrival day\") \\\n",
+    "    .size()"
    ]
   },
   {
