adding copy for janina

--- a/janina_working_file.ipynb
+++ b/janina_working_file.ipynb
@@ -1900,6 +1900,273 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 562,
+   "id": "d44e7266",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-03-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-06-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-06-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-11-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9979</th>\n",
+       "      <td>2019-10-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9980</th>\n",
+       "      <td>2017-11-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9984</th>\n",
+       "      <td>2020-07-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9986</th>\n",
+       "      <td>2020-07-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9988</th>\n",
+       "      <td>2019-08-21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5009 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     order date\n",
+       "0    2019-01-16\n",
+       "1    2019-03-11\n",
+       "2    2019-06-20\n",
+       "3    2019-06-17\n",
+       "4    2018-11-24\n",
+       "...         ...\n",
+       "9979 2019-10-31\n",
+       "9980 2017-11-05\n",
+       "9984 2020-07-27\n",
+       "9986 2020-07-16\n",
+       "9988 2019-08-21\n",
+       "\n",
+       "[5009 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 562,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new = df_orders_cleaned[[\"order date\"]]\n",
+    "new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 567,
+   "id": "e24cfb7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\janin\\AppData\\Local\\Temp\\ipykernel_1496\\994444309.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  new[\"weekday\"] = new[\"order date\"].dt.weekday\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order date</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-16</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-03-11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-06-20</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-06-17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-11-24</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9979</th>\n",
+       "      <td>2019-10-31</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9980</th>\n",
+       "      <td>2017-11-05</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9984</th>\n",
+       "      <td>2020-07-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9986</th>\n",
+       "      <td>2020-07-16</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9988</th>\n",
+       "      <td>2019-08-21</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5009 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     order date  weekday\n",
+       "0    2019-01-16        2\n",
+       "1    2019-03-11        0\n",
+       "2    2019-06-20        3\n",
+       "3    2019-06-17        0\n",
+       "4    2018-11-24        5\n",
+       "...         ...      ...\n",
+       "9979 2019-10-31        3\n",
+       "9980 2017-11-05        6\n",
+       "9984 2020-07-27        0\n",
+       "9986 2020-07-16        3\n",
+       "9988 2019-08-21        2\n",
+       "\n",
+       "[5009 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 567,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new[\"weekday\"] = new[\"order date\"].dt.weekday\n",
+    "new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 568,
+   "id": "8181a6bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "weekday\n",
+       "3    885\n",
+       "1    884\n",
+       "2    846\n",
+       "4    790\n",
+       "0    730\n",
+       "5    458\n",
+       "6    416\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 568,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new[\"weekday\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 321,
    "id": "929e8876",
    "metadata": {},
@@ -3333,6 +3600,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 572,
+   "id": "42d4a8f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ship mode  order date_weekday\n",
+       "Express    Tuesday               13\n",
+       "           Wednesday             11\n",
+       "           Monday                10\n",
+       "           Thursday              10\n",
+       "           Friday                 5\n",
+       "           Saturday               4\n",
+       "Standard   Tuesday               35\n",
+       "           Friday                32\n",
+       "           Wednesday             26\n",
+       "           Monday                25\n",
+       "           Thursday              21\n",
+       "           Saturday               9\n",
+       "           Sunday                 3\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 572,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_processed_x_truck_smode.groupby(\"ship mode\")[\"order date_weekday\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 549,
    "id": "1692bddc",
    "metadata": {},
@@ -4370,7 +4672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 476,
    "id": "b2cc80b6",
    "metadata": {},
    "outputs": [
