pandas project: eda and advanced statistical analysis

--- a/jing_wang_additional_advanced_statistical_analytics_project.ipynb
+++ b/jing_wang_additional_advanced_statistical_analytics_project.ipynb
@@ -11074,6 +11074,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7c58b05",
+   "metadata": {},
+   "source": [
+    "## Advanced statistical analysis:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8df67c09",
    "metadata": {},
    "source": [
