--- a/jing_wang_eda_analysis_&_visualization_project.ipynb
+++ b/jing_wang_eda_analysis_&_visualization_project.ipynb
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "222ea1af",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns"
    ]
   },
   {
@@ -58,11 +58,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "0183b624",
+   "cell_type": "markdown",
+   "id": "e87913ad",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Raw dataframes"
    ]
@@ -3738,59 +3736,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 140,
-   "id": "b956a741",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "on truck day\n",
-       "wednesday    199\n",
-       "friday        78\n",
-       "monday        46\n",
-       "tuesday       10\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged_o_truck_2_delivered['on truck day'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "id": "742a9363",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "arrival day\n",
-       "monday       215\n",
-       "tuesday       40\n",
-       "friday        39\n",
-       "wednesday     20\n",
-       "thursday      19\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged_o_truck_2_delivered['arrival day'].value_counts()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e013b5cd",
    "metadata": {},
@@ -3912,6 +3857,14 @@
    ],
    "source": [
     "result_on_truck"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87c6612f",
+   "metadata": {},
+   "source": [
+    "#### expected duration of on truck to delivery according to on truck day"
    ]
   },
   {
@@ -4170,6 +4123,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d5199993",
+   "metadata": {},
+   "source": [
+    "#### expected duration of on truck to delivery according to arrival day"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 148,
    "id": "a692adf0",
@@ -4392,6 +4353,20 @@
    "source": [
     "result_on_truck.query(\"`ship mode` == 'Standard'\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc2fa0c8",
+   "metadata": {},
+   "source": [
+    "### on truck date: weekdays duration for standard & express delivery, no weekends shipment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99ac7e26",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4704,6 +4679,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef0d9d3c",
+   "metadata": {},
+   "source": [
+    "### arrival date: weekdays duration for standard & express delivery"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 155,
    "id": "d5da6dd8",
@@ -4980,6 +4963,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "798a5d41",
+   "metadata": {},
+   "source": [
+    "### arrival date: weekends duration for standard & express delivery"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 157,
    "id": "1dd92cc7",
@@ -5083,6 +5074,14 @@
    ],
    "source": [
     "average_actual_duration_weekdays_arrival"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5705bd22",
+   "metadata": {},
+   "source": [
+    "## Visualization: Truck to Delivery (Actual vs Expected Duration)"
    ]
   },
   {
